--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -96,8 +96,9 @@ h1, h2 {
 }
 
 h3, h4, h5, h6 {
+  //@include rajdhani-bold;
   @include source-sans-semibold;
-  text-align: left;
+  //text-align: left;
   color: #f0f0f0;
   max-width: 70ch; // Maximum readable line length
 
@@ -110,7 +111,7 @@ h3, h4, h5, h6 {
   margin: clamp(1rem, 5vw, 3rem) 0; // 16px to 48px margins
 
   &:is(h3) {
-    font-size: clamp(1.5rem, 3.0vw + 0.5rem, 2.5rem);
+    font-size: clamp(1.75rem, 3.0vw + 0.5rem, 2.5rem);
   }
 
   // Specific h4/h5/h6 adjustments - maintain hierarchy with fluid sizes
@@ -370,6 +371,38 @@ a {
 .features__item:nth-child(2) { background-color: rgba(60, 65, 80, 0.5); }
 .features__item:nth-child(3) { background-color: rgba(65, 55, 85, 0.5); }
 
+
+.features2 {
+  width: 100vw;
+  margin: 40px auto;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  &__image {
+    padding: 0 5vw;
+    margin-top: 5vw;
+  }
+  &__video {
+    padding: 0 5vw;
+    margin-top: 5vw;
+  }
+  &__description {
+    @include source-sans;
+    padding: 0 5vw;
+    text-align: left;
+    font-size: 1.225rem;
+    line-height: 1.2;
+    //color: color.adjust($text-light, $alpha: -0.3);
+    margin: 10px auto;
+
+    @media (min-width: 1501px) {
+      font-size: 2.85rem;
+      line-height: 1.4;
+    }
+  }
+}
+
+
 .tagline {
   line-height: 0.0125;
 }
@@ -463,13 +496,14 @@ a {
   padding: 0px;
   width: 100%;
 
-  margin-top: calc(60vh + 20px);
+  margin-top: calc( (100vh * (1/1)) / 1.5 );
 
   @media (max-width: 768px) {
-    //margin-top: calc(60vh + 20px);
-    margin-top: calc( (100vw * (200/160)) / 2.0 );
+    margin-top: calc( (100vh * (1/1)) / 2.0 );
   }
 }
+
+
 
 /* Refactor your banner-image class in main.scss */
 .banner-image {
