--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -104,7 +104,7 @@ h3, h4, h5, h6 {
 
   // Fluid typography
   font-size: clamp(1.125rem, 2vw + 0.5rem, 2rem); // Smooth scaling
-  line-height: clamp(1.3, 1.3px + (0.3 * (1vw / 10)), 1.6); // Fluid line height
+  line-height: clamp(1.3, 1.3px + (0.3 * (1vw / 10)), 1.5); // Fluid line height
   letter-spacing: 0.01em;
 
   // Fluid margins - more whitespace on larger screens
@@ -143,26 +143,23 @@ h3, h4, h5, h6 {
   // Desktop/Large devices
   @media (min-width: 1501px) and (max-width: 2000px) {
     // More generous whitespace
-    margin: 2rem 0;
+    //margin: 2rem 0;
+    margin: 1.5rem 0;
   }
 
   // Extra large devices
   @media (min-width: 2001px) {
     // Maximum whitespace
-    margin: 3rem 0;
+    margin: 1.5rem 0;
   }
 }
 
-//
 //h1 { font-size: 6rem; line-height: 1.0; letter-spacing: 0rem; }
 //h2 { font-size: 6rem; line-height: 1.0; letter-spacing: 0rem; }
 //h3 { font-size: 5rem; line-height: 1.0; letter-spacing: 0rem; }
 //h4 { font-size: 5rem; line-height: 1.0; letter-spacing: 0rem; }
 //h5 { font-size: 3rem; line-height: 1.0; letter-spacing: 0rem; }
 //h6 { font-size: 3rem; line-height: 1.0; letter-spacing: 0rem; }
-
-
-
 
 header {
   margin-bottom: 25px;
